--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,12 @@
 <!-- Navigation End-->
 
 <!-- Page Content Start-->
-<app-content></app-content>
+<div class="container">
+
+	<alert></alert>
+	<router-outlet></router-outlet>
+
+</div>
 <!-- Page Content End-->
 
 <app-footer></app-footer>
