--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,7 @@
 <!-- Navigation End-->
 
 <!-- Page Content Start-->
-<div class="container">
-
-	<alert></alert>
-	<router-outlet></router-outlet>
-
-</div>
+<app-content></app-content>
 <!-- Page Content End-->
 
 <app-footer></app-footer>
