--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,11 +20,13 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Contact</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item" *ngIf="!currentUser">
 					<a class="nav-link" href="/">Login</a>
 				</li>
-				<a class="nav-item nav-link"
-					(click)="logout()"><span class="badge badge-secondary">{{currentLoggedInUser}}</span>Logout</a>
+				<li class="nav-item" *ngIf="currentUser">
+					<a class="nav-link"
+						(click)="logout()"><span class="badge badge-secondary">{{currentLoggedInUser}}</span>Logout</a>
+				</li>
 			</ul>
 		</div>
 	</div>
