--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
 					<a class="nav-link" href="#">Contact</a>
 				</li>
 				<li class="nav-item" *ngIf="!currentUser">
-					<a class="nav-link" href="/">Login</a>
+					<a class="nav-link"  routerLink="/login">Login</a>
 				</li>
 				<li class="nav-item" *ngIf="currentUser">
 					<a class="nav-link"
