--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,3 +7,11 @@
         - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
     </li>
 </ul>
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a *ngFor="let country of countries" class="dropdown-item" href="#">{{country.Name}}</a>
+  </div>
+</div>
