--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="row">
 <h1>Hi {{currentUser}}!</h1>
 <p>You're logged in with Angular 8!!</p>
 <h3>All registered users:</h3>
@@ -9,9 +10,10 @@
 </ul>
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Countr
+    Country
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a *ngFor="let country of countries" class="dropdown-item" href="#">{{country.Name}}</a>
   </div>
 </div>
+</
