--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,15 @@
-
 <h1>Hi {{currentUser}}!</h1>
 <p>You're logged in with Angular 8!!</p>
 <h3>All registered users:</h3>
 <ul>
-    <li *ngFor="let user of users">
-        {{user.username}} ({{user.first_name}} {{user.last_name}})
-        - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
-    </li>
+	<li *ngFor="let user of users">
+		{{user.username}} ({{user.first_name}} {{user.last_name}})
+		- <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
+	</li>
 </ul>
-
-    <a *ngFor="let country of countries" class="dropdown-item" href="#">{{country.Name}}</a>
+<div class="form-group">
+	<label for="exampleFormControlSelect1">Countr</label>
+	<select class="form-control" id="exampleFormControlSelect1">
+      <option *ngFor="let country of countries" value={{country.Country_ID}}>{{country.Name}}</option>
+    </select>
+</div>
