--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h2>Register Proper</h2>
+	<h2>Register Property</h2>
 	<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 		<div class="form-group">
 			<label for="first_name">First Name</label>
