--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,6 +20,10 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Contact</a>
 				</li>
+        <li class="nav-item">
+					<a class="nav-link" routerLink="/registerproperty">Add Property</a>
+				</li>
+        
 				<li class="nav-item" *ngIf="!currentUser">
 					<a class="nav-link"  routerLink="/login">Login</a>
 				</li>
