--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -2,47 +2,47 @@
 	<h2>Register Property</h2>
 	<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 		<div class="form-group">
-			<label for="first_name">First Name</label>
-			<input type="text" formControlName="first_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.first_name.errors }" />
-			<div *ngIf="submitted && f.first_name.errors" class="invalid-feedback">
-				<div *ngIf="f.first_name.errors.required">First Name is required</div>
+			<label for="Name">Property Name</label>
+			<input type="text" formControlName="Name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Name.errors }" />
+			<div *ngIf="submitted && f.Name.errors" class="invalid-feedback">
+				<div *ngIf="f.Name.errors.required">Property Name is required</div>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="last_name">Last Name</label>
-			<input type="text" formControlName="last_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }" />
-			<div *ngIf="submitted && f.last_name.errors" class="invalid-feedback">
-				<div *ngIf="f.last_name.errors.required">Last Name is required</div>
+			<label for="Description">Last Name</label>
+			<input type="text" formControlName="Description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Description.errors }" />
+			<div *ngIf="submitted && f.Description.errors" class="invalid-feedback">
+				<div *ngIf="f.Description.errors.required">Description is required</div>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="email">Email</label>
-			<input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-			<div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-				<div *ngIf="f.email.errors.required">Email is required</div>
+			<label for="No_Of_BedRooms">No. of BedRooms</label>
+			<input type="text" formControlName="No_Of_BedRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_BedRooms.errors }" />
+			<div *ngIf="submitted && f.No_Of_BedRooms.errors" class="invalid-feedback">
+				<div *ngIf="f.No_Of_BedRooms.errors.required">No. of BedRooms is required</div>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="username">Username</label>
-			<input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-			<div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-				<div *ngIf="f.username.errors.required">Username is required</div>
+			<label for="No_Of_BathRooms">No. of BathRooms</label>
+			<input type="text" formControlName="No_Of_BathRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_BathRooms.errors }" />
+			<div *ngIf="submitted && f.No_Of_BathRooms.errors" class="invalid-feedback">
+				<div *ngIf="f.No_Of_BathRooms.errors.required">No. of BathRooms is required</div>
 			</div>
 		</div>
 		<div class="form-group">
-			<label for="password">Password</label>
-			<input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-			<div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-				<div *ngIf="f.password.errors.required">Password is required</div>
-				<div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+			<label for="No_Of_Floors">No. of Floors</label>
+			<input type="text" formControlName="No_Of_Floors" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_Floors.errors }" />
+			<div *ngIf="submitted && f.No_Of_Floors.errors" class="invalid-feedback">
+				<div *ngIf="f.No_Of_Floors.errors.required">No. of Floors is required</div>
 			</div>
 		</div>
+
 		<div class="form-group">
 			<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Register
         </button>
-			<a routerLink="/login" class="btn btn-link">Cancel</a>
+			<a routerLink="/ho" class="btn btn-link">Cancel</a>
 		</div>
 	</form>
 </div>
