--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -1,48 +1,52 @@
 <div class="container">
-	<h2>Register Property</h2>
-	<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-		<div class="form-group">
-			<label for="Name">Property Name</label>
-			<input type="text" formControlName="Name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Name.errors }" />
-			<div *ngIf="submitted && f.Name.errors" class="invalid-feedback">
-				<div *ngIf="f.Name.errors.required">Property Name is required</div>
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="Description">Last Name</label>
-			<input type="text" formControlName="Description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Description.errors }" />
-			<div *ngIf="submitted && f.Description.errors" class="invalid-feedback">
-				<div *ngIf="f.Description.errors.required">Description is required</div>
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="No_Of_BedRooms">No. of BedRooms</label>
-			<input type="text" formControlName="No_Of_BedRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_BedRooms.errors }" />
-			<div *ngIf="submitted && f.No_Of_BedRooms.errors" class="invalid-feedback">
-				<div *ngIf="f.No_Of_BedRooms.errors.required">No. of BedRooms is required</div>
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="No_Of_BathRooms">No. of BathRooms</label>
-			<input type="number" formControlName="No_Of_BathRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_BathRooms.errors }" />
-			<div *ngIf="submitted && f.No_Of_BathRooms.errors" class="invalid-feedback">
-				<div *ngIf="f.No_Of_BathRooms.errors.required">No. of BathRooms is required</div>
-			</div>
-		</div>
-		<div class="form-group">
-			<label for="No_Of_Floors">No. of Floors</label>
-			<input type="number" formControlName="No_Of_Floors" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_Floors.errors }" />
-			<div *ngIf="submitted && f.No_Of_Floors.errors" class="invalid-feedback">
-				<div *ngIf="f.No_Of_Floors.errors.required">No. of Floors is required</div>
-			</div>
-		</div>
+	<div class="card">
+		<div class="card-header">Register Property</div>
+		<div class="card-body">
+			<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+				<div class="form-group">
+					<label for="Name">Property Name</label>
+					<input type="text" formControlName="Name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Name.errors }" />
+					<div *ngIf="submitted && f.Name.errors" class="invalid-feedback">
+						<div *ngIf="f.Name.errors.required">Property Name is required</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="Description">Last Name</label>
+					<input type="text" formControlName="Description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Description.errors }" />
+					<div *ngIf="submitted && f.Description.errors" class="invalid-feedback">
+						<div *ngIf="f.Description.errors.required">Description is required</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="No_Of_BedRooms">No. of BedRooms</label>
+					<input type="number" formControlName="No_Of_BedRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_BedRooms.errors }" />
+					<div *ngIf="submitted && f.No_Of_BedRooms.errors" class="invalid-feedback">
+						<div *ngIf="f.No_Of_BedRooms.errors.required">No. of BedRooms is required</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="No_Of_BathRooms">No. of BathRooms</label>
+					<input type="number" formControlName="No_Of_BathRooms" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_BathRooms.errors }" />
+					<div *ngIf="submitted && f.No_Of_BathRooms.errors" class="invalid-feedback">
+						<div *ngIf="f.No_Of_BathRooms.errors.required">No. of BathRooms is required</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="No_Of_Floors">No. of Floors</label>
+					<input type="number" formControlName="No_Of_Floors" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_Floors.errors }" />
+					<div *ngIf="submitted && f.No_Of_Floors.errors" class="invalid-feedback">
+						<div *ngIf="f.No_Of_Floors.errors.required">No. of Floors is required</div>
+					</div>
+				</div>
 
-		<div class="form-group">
-			<button [disabled]="loading" class="btn btn-primary">
+				<div class="form-group">
+					<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Register
         </button>
-			<a routerLink="/home" class="btn btn-link">Cancel</a>
+					<a routerLink="/home" class="btn btn-link">Cancel</a>
+				</div>
+			</form>
 		</div>
-	</form>
+	</div>
 </div>
