--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="card">
+	<div class="card  text-white">
 		<div class="card-header">Register Property</div>
 		<div class="card-body">
 			<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
