--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-	<div class="card  text-white">
-		<div class="card-header">Register Property</div>
+	<div class="card">
+		<div class="card-header bg-primary text-white">Register Property</div>
 		<div class="card-body">
 			<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 				<div class="form-group">
