--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -40,7 +40,16 @@
 								<div *ngIf="f.No_Of_Floors.errors.required">No. of Floors is required</div>
 							</div>
 						</div>
+						<div class="form-group">
+							<label for="Country">Country</label>
+							<select formControlName="Country" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.No_Of_Floors.errors }">
+               <option *ngFor="let country of countries" value={{country.Country_ID}}>{{country.Name}}</option>
+              </select>
 
+							<div *ngIf="submitted && f.Country.errors" class="invalid-feedback">
+								<div *ngIf="f.Country.errors.required">Country is required</div>
+							</div>
+						</div>
 						<div class="form-group">
 							<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
