--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -53,7 +53,7 @@
             <div class="form-group">
 							<label for="State">State</label>
 							<select formControlName="State" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.State.errors }">
-               <option *ngFor="let country of countries" value={{country.Country_ID}}>{{country.Name}}</option>
+               <option *ngFor="let state of states" value={{state.State_ID}}>{{state.Name}}</option>
               </select>
 
 							<div *ngIf="submitted && f.State.errors" class="invalid-feedback">
@@ -63,7 +63,7 @@
             <div class="form-group">
 							<label for="City">City</label>
 							<select formControlName="City" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.City.errors }">
-               <option *ngFor="let country of countries" value={{country.Country_ID}}>{{country.Name}}</option>
+               <option *ngFor="let city of cities" value={{city.City_ID}}>{{c.Name}}</option>
               </select>
 
 							<div *ngIf="submitted && f.City.errors" class="invalid-feedback">
@@ -81,7 +81,7 @@
 							</div>
 						</div>
             <div class="form-group">
-							<label for="Property_Status">Property St</label>
+							<label for="Property_Status">Property Status</label>
 							<select formControlName="Property_Status" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Property_Status.errors }">
                <option *ngFor="let country of countries" value={{country.Country_ID}}>{{country.Name}}</option>
               </select>
