--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,7 +29,7 @@
 				</li>
 				<li class="nav-item" *ngIf="currentUser">
 					<a class="nav-link"
-						(click)="logout()"><span class="badge badge-secondary">{{currentLoggedInUser}}</span>Logout</a>
+						(click)="logout()"><span class="badge badge-primary">{{currentLoggedInUser}}</span>Logout</a>
 				</li>
 			</ul>
 		</div>
