--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -13,7 +13,7 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="Description">Last Name</label>
+							<label for="Description">Description</label>
 							<input type="text" formControlName="Description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Description.errors }" />
 							<div *ngIf="submitted && f.Description.errors" class="invalid-feedback">
 								<div *ngIf="f.Description.errors.required">Description is required</div>
