--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Hi {{currentUser}}!</h1>
+<!--<h1>Hi {{currentUser}}!</h1>
 <p>You're logged in with Angular 8!!</p>
 <h3>All registered users:</h3>
 <ul>
@@ -7,9 +7,9 @@
 		- <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
 	</li>
 </ul>
-<div class="form-group">
+ <div class="form-group">
 	<label for="exampleFormControlSelect1">Countr</label>
 	<select class="form-control" id="exampleFormControlSelect1">
       <option *ngFor="let country of countries" value={{country.Country_ID}}>{{country.Name}}</option>
     </select>
-</div>
+</div> -->
