--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,3 +1,19 @@
 <div class="card">
-  <div class="card-body">{{property}}</div>
+  <div class="card-body">{{property}}
+    <table class="table">
+      <tr>
+        <td>Name</td>
+        <td>{{property.Name}}</td>
+      </tr>
+      <tr>
+        <td>Description</td>
+        <td>{{property.Description}}</td>
+      </tr>
+      <tr>
+        <td>Description</td>
+        <td>{{property.Description}}</td>
+      </tr>
+    </table>
+
+  </div>
 </div>
