--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,13 +1,10 @@
 <div class="card">
-  <div class="card-body">{{property}}
-    <table class="table">
+  <div class="card-header">{{property.}}</div>
+  <div class="card-body">
+    <table class="table table-bordered">
       <tr>
         <td>Name</td>
         <td>{{property.Name}}</td>
-      </tr>
-      <tr>
-        <td>Description</td>
-        <td>{{property.Description}}</td>
       </tr>
       <tr>
         <td>Description</td>
