--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-  <div class="card-header">{{property.}}</div>
+<div class="card mt-4">
+  <div class="card-header">{{property.Name}}</div>
   <div class="card-body">
     <table class="table table-bordered">
       <tr>
@@ -11,6 +11,5 @@
         <td>{{property.Description}}</td>
       </tr>
     </table>
-
   </div>
 </div>
