--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <!-- Navigation End-->
 
 <!-- Page Content Start-->
+<app-loader></app-loader>
 <app-content></app-content>
 <!-- Page Content End-->
 
