--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,4 +1,11 @@
-<div *ngIf="loadingserviceService.isLoading" class="spinner-border text-primary" style="margin: 0 50%;"
+<!--<div *ngIf="loadingserviceService.isLoading" class="spinner-border text-primary" style="margin: 0 50%;"
 		role="status">
 		<span class="sr-only">Loading...</span>
-	</div>
+	</div>-->
+  <div class="spinner" *ngIf="loadingserviceService.isLoading">
+  <div class="rect1"></div>
+  <div class="rect2"></div>
+  <div class="rect3"></div>
+  <div class="rect4"></div>
+  <div class="rect5"></div>
+</div>
