--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <!-- Page Content Start-->
 <app-loader></app-loader>
-<app-content></app-content>
+<app-content class="h-100"></app-content>
 <!-- Page Content End-->
 
 <app-footer></app-footer>
