--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,31 @@
-<div class="card mt-">
-	<article class="card-body">
-		<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
-		<h4 class="card-title mb-4 mt-1">Sign in</h4>
-		<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-			<div class="form-group">
-				<label for="username">Username</label>
-				<input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-				<div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-					<div *ngIf="f.username.errors.required">Username is required</div>
+<aside class="col-sm-4">
+	<div class="card mt-4">
+		<article class="card-body">
+			<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
+			<h4 class="card-title mb-4 mt-1">Sign in</h4>
+			<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+				<div class="form-group">
+					<label for="username">Username</label>
+					<input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+					<div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+						<div *ngIf="f.username.errors.required">Username is required</div>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<label for="password">Password</label>
-				<input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-				<div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-					<div *ngIf="f.password.errors.required">Password is required</div>
+				<div class="form-group">
+					<label for="password">Password</label>
+					<input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+					<div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+						<div *ngIf="f.password.errors.required">Password is required</div>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<button [disabled]="loading" class="btn btn-primary">
+				<div class="form-group">
+					<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Login
         </button>
-				<a routerLink="/register" class="btn btn-link">Register</a>
-			</div>
-		</form>
-	</article>
-</div>
+					<a routerLink="/register" class="btn btn-link">Register</a>
+				</div>
+			</form>
+		</article>
+	</div>
+</aside>
