--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,6 @@
 <aside class="col-sm-4">
+</aside>
+<aside class="col-sm-4">
 	<div class="card mt-4">
 		<article class="card-body">
 			<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
@@ -27,4 +29,6 @@
 			</form>
 		</article>
 	</div>
+</aside>
+<aside class="col-sm-4">
 </aside>
