--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,5 @@
-<aside class="col-sm-4">
-</aside>
-<aside class="col-sm-4">
+
+<aside class="mr-50 ml-50">
 	<div class="card mt-4">
 		<article class="card-body">
 			<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
@@ -29,6 +28,4 @@
 			</form>
 		</article>
 	</div>
-</aside>
-<aside class="col-sm-4">
 </aside>
