--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<aside class="mr-50 ml-50">
+<aside class="mx-auto">
 	<div class="card mt-4">
 		<article class="card-body">
 			<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
