--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,28 @@
-
-<aside class="mx-auto">
-	<div class="card mt-4">
-		<article class="card-body">
-			<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
-			<h4 class="card-title mb-4 mt-1">Sign in</h4>
-			<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-				<div class="form-group">
-					<label for="username">Username</label>
-					<input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-					<div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-						<div *ngIf="f.username.errors.required">Username is required</div>
-					</div>
+<div class="card mt-4 mx-50 mb-4">
+	<article class="card-body">
+		<a routerLink="/register" class="float-right btn btn-outline-primary">Sign up</a>
+		<h4 class="card-title mb-4 mt-1">Sign in</h4>
+		<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+				<div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+					<div *ngIf="f.username.errors.required">Username is required</div>
 				</div>
-				<div class="form-group">
-					<label for="password">Password</label>
-					<input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-					<div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-						<div *ngIf="f.password.errors.required">Password is required</div>
-					</div>
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+				<div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+					<div *ngIf="f.password.errors.required">Password is required</div>
 				</div>
-				<div class="form-group">
-					<button [disabled]="loading" class="btn btn-primary">
+			</div>
+			<div class="form-group">
+				<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Login
         </button>
-				</div>
-			</form>
-		</article>
-	</div>
-</aside>
+			</div>
+		</form>
+	</article>
+</div>
