--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,46 +1,50 @@
 <h2>Register</h2>
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="first_name">First Name</label>
-        <input type="text" formControlName="first_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.first_name.errors }" />
-        <div *ngIf="submitted && f.first_name.errors" class="invalid-feedback">
-            <div *ngIf="f.first_name.errors.required">First Name is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="last_name">Last Name</label>
-        <input type="text" formControlName="last_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }" />
-        <div *ngIf="submitted && f.last_name.errors" class="invalid-feedback">
-            <div *ngIf="f.last_name.errors.required">Last Name is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-            <div *ngIf="f.email.errors.required">Email is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-            <div *ngIf="f.username.errors.required">Username is required</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-        </div>
-    </div>
-    <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
+<div class="card mt-4 mx-50 mb-4">
+	<article class="card-body">
+		<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+			<div class="form-group">
+				<label for="first_name">First Name</label>
+				<input type="text" formControlName="first_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.first_name.errors }" />
+				<div *ngIf="submitted && f.first_name.errors" class="invalid-feedback">
+					<div *ngIf="f.first_name.errors.required">First Name is required</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="last_name">Last Name</label>
+				<input type="text" formControlName="last_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.last_name.errors }" />
+				<div *ngIf="submitted && f.last_name.errors" class="invalid-feedback">
+					<div *ngIf="f.last_name.errors.required">Last Name is required</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="email">Email</label>
+				<input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+				<div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+					<div *ngIf="f.email.errors.required">Email is required</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+				<div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+					<div *ngIf="f.username.errors.required">Username is required</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+				<div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+					<div *ngIf="f.password.errors.required">Password is required</div>
+					<div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Register
         </button>
-        <a routerLink="/login" class="btn btn-link">Cancel</a>
-    </div>
-</form>
+				<a routerLink="/login" class="btn btn-link">Cancel</a>
+			</div>
+		</form>
+	</article>
+</div>
