--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
-<h2>Register</h2>
 <div class="card mt-4 mx-50 mb-4">
 	<article class="card-body">
+    <h4 class="card-title mb-4 mt-1">Sign up</h4>
 		<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 			<div class="form-group">
 				<label for="first_name">First Name</label>
