--- a/src/app/registerproperty/registerproperty.component.html
+++ b/src/app/registerproperty/registerproperty.component.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col">
 			<div class="card mt-4">
-				<div class="card-header bg-primary text-white">Register Property</div>
+				<h4 class="card-title mb-4 mt-1">Add Property</h4>
 				<div class="card-body">
 					<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 						<div class="form-group">
