--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-">
+<div class="card mb-4">
   <div class="card-header">{{property.Name}}</div>
   <div class="card-body">
     <table class="table table-bordered">
