--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
 <div class="container">
 	<div class="row mt-4">
 		<div class="col-sm-4">
-			<div class="card">
+			<div class="card mb-2">
 				<article class="card-group-item">
 					<header class="card-header">
 						<h6 class="title">Similar category </h6>
@@ -56,7 +56,7 @@
 					</div>
 				</article> <!-- card-group-item.// -->
 			</div> <!-- card.// -->
-			<div class="card">
+			<div class="card ">
 				<article class="card-group-item">
 					<header class="card-header">
 						<h6 class="title">Range input </h6>
