--- a/src/app/loader/loader.component.css
+++ b/src/app/loader/loader.component.css
@@ -50,3 +50,13 @@
     -webkit-transform: scaleY(1.0);
   }
 }
+
+#overlay{
+    position: absolute;
+    top:0px;
+    left:0px;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: .5;
+}
