--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,6 +1,7 @@
-<div id="overlay" *ngIf="loadingserviceService.isLoading">
-<div  class="spinner-border text-primary" style="margin: 0 50%;"
-		role="status">
-		<span class="sr-only">Loading...</span>
+<div class="container" >
+	<div id="overlay" >
+		<div class="spinner-border text-primary" style="margin: 0 50%;" role="status">
+			<span class="sr-only">Loading...</span>
+		</div>
 	</div>
-  </div>
+</div>
