--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -85,7 +85,7 @@
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let country of countries">
 								<span class="float-right badge badge-light round">52</span>
-								<input type="checkbox" class="custom-control-input" id="chkCountry" (change)="toggleVisibility($event,country.Country_ID)" />
+								<input type="checkbox" class="custom-control-input" id="chkCountry" (change)="toggleVisibility($event,country.Country_ID,'Country')" />
 								<label class="custom-control-label" for="chkCountry">{{country.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
@@ -100,7 +100,7 @@
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let state of states">
 								<span class="float-right badge badge-light round">52</span>
-								<input type="checkbox" class="custom-control-input" id="chkState" (change)="toggleVisibility($event,state.State_ID)" />
+								<input type="checkbox" class="custom-control-input" id="chkState" (change)="toggleVisibility($event,state.State_ID,'State')" />
 								<label class="custom-control-label" for="chkState">{{state.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
@@ -115,7 +115,7 @@
 						<div class="card-body">
 							<div class="custom-control custom-checkbox" *ngFor="let city of cities">
 								<span class="float-right badge badge-light round">52</span>
-								<input type="checkbox" class="custom-control-input" id="chkCity" (change)="toggleVisibility($event,city.City_ID)" />
+								<input type="checkbox" class="custom-control-input" id="chkCity" (change)="toggleVisibility($event,city.City_ID,'City')" />
 								<label class="custom-control-label" for="chkCity">{{city.Name}}</label>
 							</div> <!-- form-check.// -->
 						</div> <!-- card-body.// -->
