--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -124,7 +124,7 @@
 			</div>
 		</div>
 		<div class="col-sm-8">
-			<app-property *ngFor="let property of properties | filter: searchText.Country" [property]="property"></app-property>
+			<app-property *ngFor="let property of properties | filter: searchText" [property]="property"></app-property>
 		</div>
 	</div>
 </div>
