--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,7 +78,7 @@
 				</article> <!-- card-group-item.// -->
 				<article class="card-group-item">
 					<header class="card-header">
-            <input type="hidden" style="display:none" [(ngModel)]="searchText" />
+            <input type="text"  [(ngModel)]="searchText" />
 						<h6 class="title">Country</h6>
 					</header>
 					<div class="filter-content">
