--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -120,7 +120,7 @@
 						</div> <!-- card-body.// -->
 					</div>
 				</article> <!-- card-group-item.// -->
-        <article class="card-group-item">
+				<article class="card-group-item">
 					<header class="card-header">
 						<h6 class="title">Property Type</h6>
 					</header>
@@ -134,7 +134,7 @@
 						</div> <!-- card-body.// -->
 					</div>
 				</article> <!-- card-group-item.// -->
-        <article class="card-group-item">
+				<article class="card-group-item">
 					<header class="card-header">
 						<h6 class="title">Property Type</h6>
 					</header>
@@ -151,10 +151,13 @@
 			</div>
 		</div>
 		<div class="col-sm-8">
-      <div class="card" *ngIf="properties">
-			<app-property *ngFor="let property of properties | filter: searchText" [property]="property"></app-property>
-      </div>
-      <div class="card" *ngIf="!properties">No Data Found</div>
+			<app-property *ngFor="let property of properties | filter: searchText" [property]="property">
+			</app-property>
+			<div class="card" *ngIf="properties.length == 0">
+				<header class="card-header">
+					<h6 class="title text-center">No Data Found</h6>
+				</header>
+			</div>
 		</div>
 	</div>
 </div>
