--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -14,6 +14,6 @@
 	</div>
 	<div class="card-footer">
 		<i class="fa fa-angular"></i>
-		<a class="float-right btn btn-outline-primary" [routerLink]="['/registerproperty',property.ID]">Edit</a>
+		<a *ngIf="currentuser == property.UserCreatedBy" class="float-right btn btn-outline-primary" [routerLink]="['/registerproperty',property.ID]">Edit</a>
 	</div>
 </div>
