--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,8 +1,10 @@
-<div class="row">
-	<div class="col">
+<div class="row mt-2">
+	<div class="col mb-2 ml-2">
 		<div id="chartContainer" class="w-100" style="height: 300px;" ></div>
 	</div>
-	<div class="col">col</div>
+	<div class="col">
+    	<div id="chartContainer1" class="w-100" style="height: 300px;" ></div>
+  </div>
 	<div class="w-100"></div>
 	<div class="col">col</div>
 	<div class="col">col</div>
