--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -8,7 +8,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col">
+		<div class="col mb-2">
 			<div class="card">
 				<div class="card-body">
 					<h5 class="card-title">Monthly Property Data</h5>
@@ -17,14 +17,13 @@
 			</div>
 		</div>
 		<div class="w-100"></div>
-		<div class="col">
+		<div class="col ">
 			<div class="card">
 				<div class="card-body">
 					<h5 class="card-title">Monthly Property Data</h5>
-					<div id="chartContainer2" class="w-100" style="height: 300px;"></div>
+					<div id="users-state-bar-chart" class="w-100" style="height: 300px;"></div>
 				</div>
 			</div>
 		</div>
-		<div class="col">col</div>
 	</div>
 </div>
