--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,9 @@
 p {
   font-family: Lato;
 }
+.card-title {
+    border-bottom: 1px solid;
+    padding-bottom: 10px;
+    font-size: 26px;
+    font-weight: 300;
+}
